docs(add peewee doc):